--- a/monitorStyles.css
+++ b/monitorStyles.css
@@ -1,10 +1,21 @@
 body {
     font-family: "Arial", sans-serif;
+    background-attachment: fixed; 
     margin: 0;
     padding: 0;
     background-size: cover;
   }
-  
+  .monitor-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed; 
+    top: 0;
+    left: 0;
+  }
   
   .monitor-container {
     display: flex;
@@ -26,6 +37,8 @@ body {
   
   .history-button {
     background: #f4a261;
+    position: relative;
+    right: 65px;
     color: white;
     padding: 8px 12px;
     border: none;
@@ -43,7 +56,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
-    width: 80%;
+    width: 30%;
     margin-top: 120px;
   }
   
