--- a/landingStyles.css
+++ b/landingStyles.css
@@ -1,6 +1,6 @@
-/* General Page Styling */
 body {
     font-family: "Arial", sans-serif;
+    background-attachment: fixed; 
     margin: 0;
     padding: 0;
     background: url('/Users/dityas/Downloads/hydrooo.jpg') no-repeat center center/cover;
@@ -8,6 +8,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .landing-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed; /* Keeps it fixed */
+    top: 0;
+    left: 0;
+
+    max-width: 100%;
   }
   
   /* Navbar */
@@ -23,10 +36,16 @@ body {
     left: 0;
   }
   
+  
   .nav-title {
-    font-size: 1.8rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2rem;
     font-weight: bold;
-  }
+    color: #D8F3DC; 
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
   
   .nav-options {
     display: flex;
@@ -121,4 +140,3 @@ body {
     font-size: 1.1rem;
     color: #333;
   }
-  
