--- a/monitorStyles.css
+++ b/monitorStyles.css
@@ -1,10 +1,11 @@
 body {
     font-family: "Arial", sans-serif;
-    background-attachment: fixed; 
     margin: 0;
     padding: 0;
-    background-size: cover;
-  }
+    background: url('./assets/hydrooo.jpg') no-repeat center center/cover;
+    background-attachment: fixed;
+}
+
   .monitor-container{
     width: 100%;
     height: 100%;
