--- a/monitorStyles.css
+++ b/monitorStyles.css
@@ -79,11 +79,13 @@ body {
     margin-bottom: 5px;
   }
   
+  
   .input-group input {
     width: 100%;
     padding: 8px;
     border: 1px solid #52b788;
     border-radius: 5px;
+    margin-left: -10px;
   }
   
   /* Image Grid */
